--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run server | npm run dev",
-    "server": "./node_modules/.bin/http-server -p 3001",
-    "dev": "webpack-dev-server --progress --colors --port 3001",
+    "start": "npm run server",
+    "server": "webpack-dev-server --progress --colors --port 3001 --history-api-fallback",
     "build": "NODE_ENV=production webpack -p --config webpack.config.production.js",
     "build-dev": "NODE_ENV=development webpack -p --config webpack.config.dev.js"
   },
@@ -19,6 +18,8 @@
     "react-css-modules": "3.7.4",
     "react-dom": "0.14.7",
     "react-redux": "4.2.1",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^3.0.0",
     "redux": "3.2.1",
     "redux-logger": "2.5.0",
     "redux-thunk": "1.0.3"
