--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "nib": "1.1.0",
     "path": "0.12.7",
     "react-hot-loader": "1.3.0",
+    "redux-devtools": "^3.1.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.4",
     "resolve-url": "0.2.1",
     "style-loader": "0.13.0",
     "stylus-loader": "1.5.1",
