--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-redux": "^3.0.0",
     "redux": "3.2.1",
     "redux-logger": "2.5.0",
-    "redux-thunk": "1.0.3"
+    "redux-thunk": "1.0.3",
+    "reselect": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "6.0.20",
